@@ -1,9 +1,11 @@
-DIST OpenArenaPack.zip 46745 RMD160 de376231a3aa083bd11f866f6d3620fab60605a6 SHA1 2cdd99d4e13819907531e8eaf69882346d4f48f8 SHA256 76dffcef3602085c2c473804f63c5632f482e8f4bc551421b38ac44b92fc7cd7
-DIST Quake2Pack.zip 10878 RMD160 8b167c129e0d0542985358cb679ef778be53389f SHA1 222ef2151b731d69291b177ea1692c4e0207387c SHA256 b62b3a38f9fc80522af91a5d6f0a62598b97790b604ba6daab5e04efa381a605
-DIST QuakePack.zip 16447 RMD160 5312d17004440044b47b5c6b3edce2ed910c0ca8 SHA1 28ef966012854bcd3320a75bddf93b97c5589afd SHA256 234a7bb111b97878ae801ad8dc0613b59b8900bf0582072e9d784113153490d6
-DIST TremulousPack.zip 17153 RMD160 fe004da3eb1bf02e474e1ffdbe582913f0c9d3c6 SHA1 e6343ba67f8dbc7c5f42b4c65df865eb24767278 SHA256 2328a88a9353b42a3834ce6f6a4c1d6dc056c84582afcc520c6bd486ba8c1287
+DIST OpenArenaPack.zip 46745 RMD160 7262fdd4b2f98f20294e9826a3d7e7149ea415a1 SHA1 d168bb46a30bfba4104c5e30c66a717be2969618 SHA256 82dd8b3b48782623579ee386a9ee5b6c29a50a1b2a160b60f085aa0ee1b4e69f
+DIST OsirionPack.zip 3706 RMD160 4f5df1c0771cdc299d78c6c0640a8d5c0f17b46e SHA1 cc43b77dd86cf6cc46e3e55f311ea54a96cf52de SHA256 85302e10442df62764ce658c959baaec88b42e105bc0f888015866f99849e97a
+DIST Quake2Pack.zip 10878 RMD160 e977e5366b276e3bec03a0afd48b168087f22441 SHA1 d062291db58c8e7c0560073271c8e63971369aff SHA256 c4a3f2eb4e4ae771897bb018de8aa565532293f24558dbe93a98f16dc3631592
+DIST QuakePack.zip 16447 RMD160 534369eacf4f85f9920d14dc7bdc46b3794e53db SHA1 e161ff09275257a72020a49d85fe8f964393c87e SHA256 a4e838e4bba350de906d5c9db36301ea21979540940c9639fbbefbaec99b0db2
+DIST TremulousPack.zip 17153 RMD160 c51a6be8bf0a0de5fd084984375361f6c1b022ca SHA1 45508c0fa02c417943dd365cfc4dc799bc96ca3a SHA256 25737d258af7d9dd47cbf8942948e8e1322a6404a643c875911d6a39120567ce
+DIST WarsowPack.zip 17855 RMD160 ba49f62486bb67732071e538b0719335bb0625f4 SHA1 5b64e97ed78e5b3e5679710d382bce804214518c SHA256 756a99c76e486ea3f5d2c45addf8afed504a2faf3087cdd210b420af259c2653
 DIST netradiant-1.5.0_p20110127.tar.xz 2066856 RMD160 cf4f28a08a89052882920a9aecc3c25f3426ce5f SHA1 c07f7168700994a88a8fac3c1b8ab9be2f24e75d SHA256 a3607f0beb66b4ff2d7451ad5e9849d0fd85ab0274931bc12c5fbe1c480e3ee7
 EBUILD netradiant-1.5.0_p20110127.ebuild 4216 RMD160 40341f2bb5e11b2454ec42b2cf4fa509e5fbd77d SHA1 fb8522db4cedb7cc0efeac7e09226a45879ab1ac SHA256 c8f53bc11b66c81d3051cb2c15b0096c50d99030663f3832499af862fdab9046
-EBUILD netradiant-9999.ebuild 6554 RMD160 6d545a0d3a9923610693aa63bb6db571d9ef7684 SHA1 0f1baa194ef8b48fdbc258fae90f12f4f20d0717 SHA256 d1dcbf302a261fa1bf3a00374796e4339b23ef33cf7ba5d014bd001d0bf71889
-MISC ChangeLog 563 RMD160 f2c794dc82bd0c90563e8f9b6aaf186445ec077e SHA1 e6ddd209fb4a7ab12e97fab981e4e9f0c98d570f SHA256 fda80d77b887610ce92a9f5f2c1d9181c7b0d891ad8cd1e3b7662c55270cf22a
-MISC metadata.xml 1135 RMD160 622c62e6d19dd56e67a0e3d81769bab188cd8995 SHA1 78959671e514034724f235cf0866a774eebc8493 SHA256 f7cf648da6ef09104d7e325168d02a096972b103b427a19dec74a282fef4efd0
+EBUILD netradiant-9999.ebuild 6625 RMD160 b213efd39d38ad1f147cbb5c014e818cbae52f1f SHA1 dd677e0a874bc3c92d4aa4eb32b43a043e88b7c5 SHA256 cf0b00dc365e3c644316079fec6b157714bc104abdde82842b82661f47c4f42f
+MISC ChangeLog 662 RMD160 a4ec79b0f57bae2c38a86957c87a1439bc195f82 SHA1 a632c2535d3060e71063641822b8adebaa0781ed SHA256 4becf534ec619bcb84b769561e813786a21a02f86adbda6d98a75846b875a6be
+MISC metadata.xml 1186 RMD160 be062c22d9a05efbffacba53c88f2ed64b3bfc82 SHA1 dcf36e19740d7918e273cb6b4ab284311e0e6308 SHA256 fdd751ec9cc622879d9a46f66f3a90c390177ddf4b421768abdce5e82688db5f
